fixed background distortion

--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -21,6 +21,8 @@ ul {
 .welcome {
   background-image: url('./images/img-home.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
   margin-left: -8px;
   margin-right: -8px;
@@ -42,6 +44,8 @@ ul {
 .user-events-parks {
   background-image: url('./images/img-userEventsParks.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
   margin-left: -8px;
   margin-right: -8px;
@@ -109,7 +113,8 @@ ul {
 
 .events-parks {
   background-image: url('./images/img-66.jpg');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin-left: -8px;
   margin-right: -8px;
   margin-bottom: 90px;
@@ -275,7 +280,8 @@ li {
 }
 .sign-up-main {
     background-image: url('./images/img-9.jpg');
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100vh;
     margin-left: -8px;
     margin-right: -8px;
@@ -284,7 +290,8 @@ li {
 
 .login-main {
   background-image: url('./images/img-4.jpg');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
   margin-left: -8px;
   margin-right: -8px;
